--- a/googlewebdesigner/728-90/728-90.html
+++ b/googlewebdesigner/728-90/728-90.html
@@ -88,11 +88,11 @@
         transform: translate3d(0px, -2px, 0px);
         animation-timing-function: ease-out;
       }
-      25% {
+      21.7391% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: linear;
       }
-      75% {
+      78.2609% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: ease-in;
       }
@@ -102,18 +102,18 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-1a4bgwdanimation {
-      animation: 2s linear 0.2s 1 normal forwards running gwd-gen-1a4bgwdanimation_gwd-keyframes;
+      animation: 2.3s linear 0.2s 1 normal forwards running gwd-gen-1a4bgwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-1w17gwdanimation_gwd-keyframes {
       0% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: ease-out;
       }
-      7.4627% {
+      5.8824% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: linear;
       }
-      92.5373% {
+      94.1176% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: ease-in;
       }
@@ -123,18 +123,18 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-1w17gwdanimation {
-      animation: 6.7s linear 0s 1 normal forwards running gwd-gen-1w17gwdanimation_gwd-keyframes;
+      animation: 8.5s linear 0s 1 normal forwards running gwd-gen-1w17gwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-b2qggwdanimation_gwd-keyframes {
       0% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: ease-out;
       }
-      7.5758% {
+      5.9524% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: linear;
       }
-      92.4242% {
+      94.0476% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: ease-in;
       }
@@ -144,18 +144,18 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-b2qggwdanimation {
-      animation: 6.6s linear 0.1s 1 normal forwards running gwd-gen-b2qggwdanimation_gwd-keyframes;
+      animation: 8.4s linear 0.1s 1 normal forwards running gwd-gen-b2qggwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-116fgwdanimation_gwd-keyframes {
       0% {
         transform: translate3d(0px, -2px, 0px);
         animation-timing-function: ease-out;
       }
-      25% {
+      20% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: linear;
       }
-      75% {
+      80% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: ease-in;
       }
@@ -165,18 +165,18 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-116fgwdanimation {
-      animation: 2s linear 1.7s 1 normal forwards running gwd-gen-116fgwdanimation_gwd-keyframes;
+      animation: 2.5s linear 2s 1 normal forwards running gwd-gen-116fgwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-88bggwdanimation_gwd-keyframes {
       0% {
         transform: translate3d(0px, -2px, 0px);
         animation-timing-function: ease-out;
       }
-      25% {
+      20% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: linear;
       }
-      75% {
+      80% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: ease-in;
       }
@@ -186,18 +186,18 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-88bggwdanimation {
-      animation: 2s linear 4.7s 1 normal forwards running gwd-gen-88bggwdanimation_gwd-keyframes;
+      animation: 2.5s linear 6s 1 normal forwards running gwd-gen-88bggwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-h1o1gwdanimation_gwd-keyframes {
       0% {
         transform: translate3d(0px, -2px, 0px);
         animation-timing-function: ease-out;
       }
-      25% {
+      20% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: linear;
       }
-      75% {
+      80% {
         transform: translate3d(0px, 106px, 0px);
         animation-timing-function: ease-in;
       }
@@ -207,7 +207,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-h1o1gwdanimation {
-      animation: 2s linear 3.2s 1 normal forwards running gwd-gen-h1o1gwdanimation_gwd-keyframes;
+      animation: 2.5s linear 4s 1 normal forwards running gwd-gen-h1o1gwdanimation_gwd-keyframes;
     }
     .gwd-div-1kkv {
       position: absolute;
@@ -233,11 +233,11 @@
         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         animation-timing-function: linear;
       }
-      38.8889% {
+      41.7391% {
         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         animation-timing-function: linear;
       }
-      94.4444% {
+      95.6522% {
         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         animation-timing-function: ease-in-out;
       }
@@ -247,7 +247,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-jzt8gwdanimation {
-      animation: 9s linear 0s 1 normal forwards running gwd-gen-jzt8gwdanimation_gwd-keyframes;
+      animation: 11.5s linear 0s 1 normal forwards running gwd-gen-jzt8gwdanimation_gwd-keyframes;
     }
     .gwd-image-1jp1 {
       position: absolute;
@@ -263,15 +263,15 @@
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      74.4444% {
+      71.8447% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      80% {
+      76.699% {
         transform: translate3d(0px, 104px, 0px);
         animation-timing-function: linear;
       }
-      94.4444% {
+      95.1456% {
         transform: translate3d(0px, 104px, 0px);
         animation-timing-function: ease-in-out;
       }
@@ -281,7 +281,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-11x2gwdanimation {
-      animation: 9s linear 0s 1 normal forwards running gwd-gen-11x2gwdanimation_gwd-keyframes;
+      animation: 10.3s linear 1.2s 1 normal forwards running gwd-gen-11x2gwdanimation_gwd-keyframes;
     }
     .gwd-image-16h3 {
       position: absolute;
@@ -306,15 +306,15 @@
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      81.8182% {
+      82.3944% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: cubic-bezier(0.42, 0, 0.725, 1.175);
       }
-      86.3636% {
+      85.9155% {
         transform: translate3d(0px, 109px, 0px);
         animation-timing-function: linear;
       }
-      95.4545% {
+      96.4789% {
         transform: translate3d(0px, 109px, 0px);
         animation-timing-function: ease-in-out;
       }
@@ -324,22 +324,22 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-y3scgwdanimation {
-      animation: 11s linear 0s 1 normal forwards running gwd-gen-y3scgwdanimation_gwd-keyframes;
+      animation: 14.2s linear 0s 1 normal forwards running gwd-gen-y3scgwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-qr31gwdanimation_gwd-keyframes {
       0% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      82.7273% {
+      83.0986% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: cubic-bezier(0.42, 0, 0.725, 1.175);
       }
-      87.2727% {
+      86.6197% {
         transform: translate3d(0px, 109px, 0px);
         animation-timing-function: linear;
       }
-      95.4545% {
+      96.4789% {
         transform: translate3d(0px, 109px, 0px);
         animation-timing-function: ease-in-out;
       }
@@ -349,7 +349,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-qr31gwdanimation {
-      animation: 11s linear 0s 1 normal forwards running gwd-gen-qr31gwdanimation_gwd-keyframes;
+      animation: 14.2s linear 0s 1 normal forwards running gwd-gen-qr31gwdanimation_gwd-keyframes;
     }
     .gwd-image-16b3 {
       position: absolute;
@@ -365,15 +365,15 @@
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      84% {
+      85.0299% {
         transform: translate3d(0px, 0px, 0px);
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
-      88% {
+      88.024% {
         transform: translate3d(0px, 91px, 0px);
         animation-timing-function: linear;
       }
-      96% {
+      97.006% {
         transform: translate3d(0px, 91px, 0px);
         animation-timing-function: linear;
       }
@@ -383,7 +383,154 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-1axlgwdanimation {
-      animation: 12.5s linear 0s 1 normal forwards running gwd-gen-1axlgwdanimation_gwd-keyframes;
+      animation: 16.7s linear 0s 1 normal forwards running gwd-gen-1axlgwdanimation_gwd-keyframes;
+    }
+    .gwd-div-1tof {
+      left: -168px;
+    }
+    .gwd-div-2fcb {
+      top: 0px;
+      left: -740px;
+    }
+    @keyframes gwd-gen-1q96gwdanimation_gwd-keyframes {
+      0% {
+        left: -740px;
+        animation-timing-function: linear;
+      }
+      95.8084% {
+        left: -740px;
+        animation-timing-function: ease-out;
+      }
+      100% {
+        left: 0px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1q96gwdanimation {
+      animation: 16.7s linear 0s 1 normal forwards running gwd-gen-1q96gwdanimation_gwd-keyframes;
+    }
+    .gwd-image-1alc {
+      position: absolute;
+      width: 0px;
+      height: 90px;
+      top: 0px;
+      left: 70px;
+    }
+    @keyframes gwd-gen-6ckjgwdanimation_gwd-keyframes {
+      0% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      31.8182% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      90.9091% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-6ckjgwdanimation {
+      animation: 2.2s linear 0s 1 normal forwards running gwd-gen-6ckjgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-5c5dgwdanimation_gwd-keyframes {
+      0% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      10.5263% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      89.4737% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-5c5dgwdanimation {
+      animation: 1.9s linear 2.3s 1 normal forwards running gwd-gen-5c5dgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-15u2gwdanimation_gwd-keyframes {
+      0% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      10.5263% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      89.4737% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-15u2gwdanimation {
+      animation: 1.9s linear 4.3s 1 normal forwards running gwd-gen-15u2gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-11b0gwdanimation_gwd-keyframes {
+      0% {
+        width: 0px;
+        left: 70px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      9.0909% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: linear;
+      }
+      77.2727% {
+        width: 140px;
+        left: 0px;
+        top: 0px;
+        animation-timing-function: ease-in;
+      }
+      100% {
+        width: 140px;
+        left: 0px;
+        top: 98px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-11b0gwdanimation {
+      animation: 2.2s linear 6.3s 1 normal forwards running gwd-gen-11b0gwdanimation_gwd-keyframes;
     }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -393,25 +540,53 @@
   <script data-source="https://s0.2mdn.net/ads/studio/Enabler.js" data-exports-type="gwd-google-ad" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
   <script data-source="gwdgooglead_min.js" data-version="8" data-exports-type="gwd-google-ad" src="gwdgooglead_min.js"></script>
   <script data-source="gwdimage_min.js" data-version="15" data-exports-type="gwd-image" src="gwdimage_min.js"></script>
+  <script type="text/javascript" gwd-events="support" src="gwd-events-support.1.0.js"></script>
+  <script type="text/javascript" gwd-events="handlers">
+    gwd.auto_Page1Event_1 = function(event) {
+      // GWD Predefined Function
+      gwd.actions.timeline.gotoAndPlay('page1', 'start');
+    };
+  </script>
+  <script type="text/javascript" gwd-events="registration">
+    // Support code for event handling in Google Web Designer
+    // This script block is auto-generated. Please do not edit!
+    gwd.actions.events.registerEventHandlers = function(event) {
+      gwd.actions.events.addHandler('page1', 'event-1', gwd.auto_Page1Event_1, false);
+      gwd.actions.timeline.captureAnimationEnd(document.body);
+    };
+    gwd.actions.events.deregisterEventHandlers = function(event) {
+      gwd.actions.events.removeHandler('page1', 'event-1', gwd.auto_Page1Event_1, false);
+      gwd.actions.timeline.releaseAnimationEnd(document.body);
+    };
+    document.addEventListener("DOMContentLoaded", gwd.actions.events.registerEventHandlers);
+    document.addEventListener("unload", gwd.actions.events.deregisterEventHandlers);
+  </script>
 </head>
 
 <body>
   <gwd-google-ad id="gwd-ad" polite-load="">
+    <gwd-metric-configuration></gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
-      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="728px" data-gwd-height="90px">
+      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="728px" data-gwd-height="90px" data-gwd-animation-labels="start,0">
         <div class="gwd-page-content gwd-page-size">
-          <div class="gwd-div-1kkv" id="bg2"></div>
+          <div class="gwd-div-1kkv gwd-div-1tof" id="bg2"></div>
           <div class="gwd-div-1kkv gwd-div-1f3w gwd-gen-jzt8gwdanimation" id="bg1"></div>
-          <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-1jp1 gwd-gen-11x2gwdanimation"></gwd-image>
-          <gwd-image id="heder4" source="assets/heder4.png" scaling="stretch" class="gwd-image-o14z gwd-gen-88bggwdanimation"></gwd-image>
-          <gwd-image id="heder3" source="assets/heder3.png" scaling="stretch" class="gwd-image-o14z gwd-gen-h1o1gwdanimation"></gwd-image>
-          <gwd-image id="heder2" source="assets/heder2.png" scaling="stretch" class="gwd-image-o14z gwd-gen-116fgwdanimation"></gwd-image>
           <gwd-image id="heder1" source="assets/heder1.png" scaling="stretch" class="gwd-image-o14z gwd-gen-1a4bgwdanimation"></gwd-image>
+          <gwd-image id="heder1d" source="assets/heder1d.png" scaling="none" class="gwd-image-1alc gwd-gen-6ckjgwdanimation"></gwd-image>
+          <gwd-image id="heder2" source="assets/heder2.png" scaling="stretch" class="gwd-image-o14z gwd-gen-116fgwdanimation"></gwd-image>
+          <gwd-image id="heder2d" source="assets/heder2d.png" scaling="none" class="gwd-image-1alc gwd-gen-5c5dgwdanimation"></gwd-image>
+          <gwd-image id="heder3" source="assets/heder3.png" scaling="stretch" class="gwd-image-o14z gwd-gen-h1o1gwdanimation"></gwd-image>
+          <gwd-image id="heder3d" source="assets/heder3d.png" scaling="none" class="gwd-image-1alc gwd-gen-15u2gwdanimation"></gwd-image>
+          <gwd-image id="heder4" source="assets/heder4.png" scaling="stretch" class="gwd-image-o14z gwd-gen-88bggwdanimation"></gwd-image>
+          <gwd-image id="heder4d" source="assets/heder4d.png" scaling="none" class="gwd-image-1alc gwd-gen-11b0gwdanimation"></gwd-image>
           <gwd-image id="text2" source="assets/text2.png" scaling="stretch" class="gwd-image-g350 gwd-gen-b2qggwdanimation"></gwd-image>
           <gwd-image id="text1" source="assets/text1.png" scaling="stretch" class="gwd-image-1l0a gwd-gen-1w17gwdanimation"></gwd-image>
+          <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-1jp1 gwd-gen-11x2gwdanimation"></gwd-image>
           <gwd-image id="text3" source="assets/text3.png" scaling="stretch" class="gwd-image-16h3 gwd-gen-y3scgwdanimation"></gwd-image>
           <gwd-image id="text4" source="assets/text4.png" scaling="stretch" class="gwd-image-1eub gwd-gen-qr31gwdanimation"></gwd-image>
+          <div class="gwd-div-1kkv gwd-div-1tof gwd-div-2fcb gwd-gen-1q96gwdanimation" id="bg3"></div>
           <gwd-image id="long-text-0" source="assets/long-text-0.png" scaling="stretch" class="gwd-image-16b3 gwd-gen-1axlgwdanimation"></gwd-image>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="18600"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
