--- a/googlewebdesigner/728-90/728-90.html
+++ b/googlewebdesigner/728-90/728-90.html
@@ -421,15 +421,15 @@
         width: 0px;
         left: 70px;
         top: 0px;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
-      31.8182% {
+      25% {
         width: 140px;
         left: 0px;
         top: 0px;
         animation-timing-function: linear;
       }
-      90.9091% {
+      90% {
         width: 140px;
         left: 0px;
         top: 0px;
@@ -443,14 +443,14 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-6ckjgwdanimation {
-      animation: 2.2s linear 0s 1 normal forwards running gwd-gen-6ckjgwdanimation_gwd-keyframes;
+      animation: 2s linear 0.2s 1 normal forwards running gwd-gen-6ckjgwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-5c5dgwdanimation_gwd-keyframes {
       0% {
         width: 0px;
         left: 70px;
         top: 0px;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
       10.5263% {
         width: 140px;
@@ -479,7 +479,7 @@
         width: 0px;
         left: 70px;
         top: 0px;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
       10.5263% {
         width: 140px;
@@ -508,7 +508,7 @@
         width: 0px;
         left: 70px;
         top: 0px;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
       9.0909% {
         width: 140px;
@@ -531,6 +531,346 @@
     }
     #page1.gwd-play-animation .gwd-gen-11b0gwdanimation {
       animation: 2.2s linear 6.3s 1 normal forwards running gwd-gen-11b0gwdanimation_gwd-keyframes;
+    }
+    .gwd-image-d1l2 {
+      position: absolute;
+      width: 167px;
+      height: 72px;
+      left: 537px;
+      top: 97px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    @keyframes gwd-gen-3vrhgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      97.093% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        transform: translate3d(0px, -82px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-3vrhgwdanimation {
+      animation: 17.2s linear 0s 1 normal forwards running gwd-gen-3vrhgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-i8el {
+      position: absolute;
+      top: 6px;
+      width: 24px;
+      height: 22.73px;
+      left: 64px;
+      transform: translate3d(0px, -41px, 0px);
+      transform-style: preserve-3d;
+    }
+    .gwd-image-bbgd {
+      position: absolute;
+      width: 22px;
+      height: 21.52px;
+      top: 5px;
+      left: 41px;
+      transform: translate3d(0px, -41px, 0px);
+      transform-style: preserve-3d;
+    }
+    .gwd-image-1z0w {
+      position: absolute;
+      width: 23px;
+      height: 24.86px;
+      top: 4px;
+      left: 89px;
+      transform: translate3d(0px, -41px, 0px);
+      transform-style: preserve-3d;
+    }
+    .gwd-image-1xvr {
+      position: absolute;
+      width: 26px;
+      height: 25px;
+      left: 18px;
+      top: 43px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, -96px, 0px);
+    }
+    .gwd-image-m4wf {
+      position: absolute;
+      width: 73px;
+      height: 39px;
+      left: 114px;
+      top: 0px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, -94px, 0px);
+    }
+    .gwd-image-12c9 {
+      position: absolute;
+      width: 61px;
+      height: 61px;
+      transform-style: preserve-3d;
+      left: 40px;
+      top: 113px;
+      transform: translate3d(19px, 0px, 0px);
+    }
+    .gwd-image-hez3 {
+      position: absolute;
+      width: 45px;
+      height: 47px;
+      left: 106px;
+      top: 23px;
+      transform-style: preserve-3d;
+      transform: translate3d(3px, -89px, 0px);
+    }
+    .gwd-image-1d4q {
+      position: absolute;
+      width: 21px;
+      height: 21.48px;
+      top: 6px;
+      left: 17px;
+      transform: translate3d(0px, -41px, 0px);
+      transform-style: preserve-3d;
+    }
+    .gwd-image-18do {
+      position: absolute;
+      width: 116px;
+      height: 56px;
+      left: 50px;
+      top: 32px;
+      transform: translate3d(0px, -92px, 0px);
+      transform-style: preserve-3d;
+    }
+    .gwd-div-1w8m {
+      position: absolute;
+      left: 0px;
+      width: 200.42px;
+      top: -50px;
+      height: 80px;
+      background-image: none;
+      background-color: rgb(77, 97, 118);
+      transform: translate3d(0px, -39px, 0px);
+      transform-style: preserve-3d;
+    }
+    @keyframes gwd-gen-spuogwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -92px, 0px);
+        animation-timing-function: ease-out;
+      }
+      25% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      75% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-spuogwdanimation {
+      animation: 2s linear 18.5s 1 normal forwards running gwd-gen-spuogwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-19zhgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -92px, 0px);
+        animation-timing-function: ease-out;
+      }
+      23.8095% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      76.1905% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-19zhgwdanimation {
+      animation: 2.1s linear 18.4s 1 normal forwards running gwd-gen-19zhgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-5cc4gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -39px, 0px);
+        animation-timing-function: linear;
+      }
+      10.4167% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      47.9167% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      52.0833% {
+        transform: translate3d(0px, -38px, 0px);
+        animation-timing-function: linear;
+      }
+      68.75% {
+        transform: translate3d(0px, -38px, 0px);
+        animation-timing-function: linear;
+      }
+      85.4167% {
+        transform: translate3d(0px, -38px, 0px);
+        animation-timing-function: linear;
+      }
+      89.5833% {
+        transform: translate3d(-43px, 55px, 0px);
+        animation-timing-function: ease-in;
+      }
+      100% {
+        transform: translate3d(-112px, 57px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-5cc4gwdanimation {
+      animation: 4.8s linear 16.7s 1 normal forwards running gwd-gen-5cc4gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-9xi5gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -41px, 0px);
+        animation-timing-function: linear;
+      }
+      14.7059% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      85.2941% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-9xi5gwdanimation {
+      animation: 3.4s linear 17.1s 1 normal forwards running gwd-gen-9xi5gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-q8ufgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -41px, 0px);
+        animation-timing-function: linear;
+      }
+      14.2857% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      85.7143% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-q8ufgwdanimation {
+      animation: 3.5s linear 17s 1 normal forwards running gwd-gen-q8ufgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1my5gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -41px, 0px);
+        animation-timing-function: linear;
+      }
+      13.8889% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      86.1111% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1my5gwdanimation {
+      animation: 3.6s linear 16.9s 1 normal forwards running gwd-gen-1my5gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1cpsgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -41px, 0px);
+        animation-timing-function: linear;
+      }
+      13.5135% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      86.4865% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1cpsgwdanimation {
+      animation: 3.7s linear 16.8s 1 normal forwards running gwd-gen-1cpsgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-14q9gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, -41px, 0px);
+        animation-timing-function: linear;
+      }
+      13.1579% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      86.8421% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(3px, -96px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-14q9gwdanimation {
+      animation: 3.8s linear 16.7s 1 normal forwards running gwd-gen-14q9gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-17pogwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(19px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      41.6667% {
+        transform: translate3d(20px, -97px, 0px);
+        animation-timing-function: linear;
+      }
+      58.3333% {
+        transform: translate3d(20px, -97px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(-16px, -97px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-17pogwdanimation {
+      animation: 1.2s linear 20.3s 1 normal forwards running gwd-gen-17pogwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1bdigwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(3px, -89px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1bdigwdanimation {
+      animation: 0.2s linear 20.8s 1 normal forwards running gwd-gen-1bdigwdanimation_gwd-keyframes;
+    }
+    .gwd-page-k66v {
+      background-image: none;
+      background-color: rgb(232, 231, 233);
     }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -567,26 +907,37 @@
   <gwd-google-ad id="gwd-ad" polite-load="">
     <gwd-metric-configuration></gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
-      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="728px" data-gwd-height="90px" data-gwd-animation-labels="start,0">
+      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-k66v" data-gwd-width="728px" data-gwd-height="90px" data-gwd-animation-labels="start,0">
         <div class="gwd-page-content gwd-page-size">
           <div class="gwd-div-1kkv gwd-div-1tof" id="bg2"></div>
           <div class="gwd-div-1kkv gwd-div-1f3w gwd-gen-jzt8gwdanimation" id="bg1"></div>
-          <gwd-image id="heder1" source="assets/heder1.png" scaling="stretch" class="gwd-image-o14z gwd-gen-1a4bgwdanimation"></gwd-image>
-          <gwd-image id="heder1d" source="assets/heder1d.png" scaling="none" class="gwd-image-1alc gwd-gen-6ckjgwdanimation"></gwd-image>
-          <gwd-image id="heder2" source="assets/heder2.png" scaling="stretch" class="gwd-image-o14z gwd-gen-116fgwdanimation"></gwd-image>
-          <gwd-image id="heder2d" source="assets/heder2d.png" scaling="none" class="gwd-image-1alc gwd-gen-5c5dgwdanimation"></gwd-image>
-          <gwd-image id="heder3" source="assets/heder3.png" scaling="stretch" class="gwd-image-o14z gwd-gen-h1o1gwdanimation"></gwd-image>
-          <gwd-image id="heder3d" source="assets/heder3d.png" scaling="none" class="gwd-image-1alc gwd-gen-15u2gwdanimation"></gwd-image>
-          <gwd-image id="heder4" source="assets/heder4.png" scaling="stretch" class="gwd-image-o14z gwd-gen-88bggwdanimation"></gwd-image>
-          <gwd-image id="heder4d" source="assets/heder4d.png" scaling="none" class="gwd-image-1alc gwd-gen-11b0gwdanimation"></gwd-image>
-          <gwd-image id="text2" source="assets/text2.png" scaling="stretch" class="gwd-image-g350 gwd-gen-b2qggwdanimation"></gwd-image>
-          <gwd-image id="text1" source="assets/text1.png" scaling="stretch" class="gwd-image-1l0a gwd-gen-1w17gwdanimation"></gwd-image>
-          <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-1jp1 gwd-gen-11x2gwdanimation"></gwd-image>
-          <gwd-image id="text3" source="assets/text3.png" scaling="stretch" class="gwd-image-16h3 gwd-gen-y3scgwdanimation"></gwd-image>
-          <gwd-image id="text4" source="assets/text4.png" scaling="stretch" class="gwd-image-1eub gwd-gen-qr31gwdanimation"></gwd-image>
+          <gwd-image id="heder1" source="assets/png/heder1.png" scaling="stretch" class="gwd-image-o14z gwd-gen-1a4bgwdanimation"></gwd-image>
+          <gwd-image id="heder1d" source="assets/png/heder1d.png" scaling="none" class="gwd-image-1alc gwd-gen-6ckjgwdanimation" alignment="right" focalpoint="64 33.5" disablefocalpoint=""></gwd-image>
+          <gwd-image id="heder2" source="assets/png/heder2.png" scaling="stretch" class="gwd-image-o14z gwd-gen-116fgwdanimation"></gwd-image>
+          <gwd-image id="heder2d" source="assets/png/heder2d.png" scaling="none" class="gwd-image-1alc gwd-gen-5c5dgwdanimation" alignment="right"></gwd-image>
+          <gwd-image id="heder3" source="assets/png/heder3.png" scaling="stretch" class="gwd-image-o14z gwd-gen-h1o1gwdanimation"></gwd-image>
+          <gwd-image id="heder3d" source="assets/png/heder3d.png" scaling="none" class="gwd-image-1alc gwd-gen-15u2gwdanimation" alignment="right"></gwd-image>
+          <gwd-image id="heder4" source="assets/png/heder4.png" scaling="stretch" class="gwd-image-o14z gwd-gen-88bggwdanimation"></gwd-image>
+          <gwd-image id="heder4d" source="assets/png/heder4d.png" scaling="none" class="gwd-image-1alc gwd-gen-11b0gwdanimation" alignment="right"></gwd-image>
+          <gwd-image id="text2" source="assets/png/text2.png" scaling="stretch" class="gwd-image-g350 gwd-gen-b2qggwdanimation"></gwd-image>
+          <gwd-image id="text1" source="assets/png/text1.png" scaling="stretch" class="gwd-image-1l0a gwd-gen-1w17gwdanimation"></gwd-image>
+          <gwd-image id="roshn-logo" source="assets/png/roshn-logo.png" scaling="stretch" class="gwd-image-1jp1 gwd-gen-11x2gwdanimation"></gwd-image>
+          <gwd-image id="text3" source="assets/png/text3.png" scaling="stretch" class="gwd-image-16h3 gwd-gen-y3scgwdanimation"></gwd-image>
+          <gwd-image id="text4" source="assets/png/text4.png" scaling="stretch" class="gwd-image-1eub gwd-gen-qr31gwdanimation"></gwd-image>
           <div class="gwd-div-1kkv gwd-div-1tof gwd-div-2fcb gwd-gen-1q96gwdanimation" id="bg3"></div>
-          <gwd-image id="long-text-0" source="assets/long-text-0.png" scaling="stretch" class="gwd-image-16b3 gwd-gen-1axlgwdanimation"></gwd-image>
-          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="18600"></div>
+          <gwd-image id="long-text-0" source="assets/png/long-text-0.png" scaling="stretch" class="gwd-image-16b3 gwd-gen-1axlgwdanimation"></gwd-image>
+          <gwd-image id="hash-tag" source="assets/png/hash-tag.png" scaling="stretch" class="gwd-image-d1l2 gwd-gen-3vrhgwdanimation"></gwd-image>
+          <gwd-image id="PIF-text" source="assets/png/PIF-text.png" scaling="stretch" class="gwd-image-hez3 gwd-gen-1bdigwdanimation"></gwd-image>
+          <div class="gwd-div-1w8m gwd-gen-5cc4gwdanimation" id="bg-roshn"></div>
+          <gwd-image id="internet" source="assets/png/internet.png" scaling="stretch" class="gwd-image-1xvr gwd-gen-19zhgwdanimation"></gwd-image>
+          <gwd-image id="gwd-image_1" source="assets/png/roshn.sa.png" scaling="stretch" class="gwd-image-18do gwd-gen-spuogwdanimation"></gwd-image>
+          <gwd-image id="twitter" source="assets/png/image.png" scaling="stretch" class="gwd-image-1d4q gwd-gen-14q9gwdanimation"></gwd-image>
+          <gwd-image id="in" source="assets/png/in.png" scaling="stretch" class="gwd-image-bbgd gwd-gen-1cpsgwdanimation"></gwd-image>
+          <gwd-image id="f" source="assets/png/f.png" scaling="stretch" class="gwd-image-i8el gwd-gen-1my5gwdanimation"></gwd-image>
+          <gwd-image id="youtube" source="assets/png/youtube.png" scaling="stretch" class="gwd-image-1z0w gwd-gen-q8ufgwdanimation"></gwd-image>
+          <gwd-image id="ROSHNSA" source="assets/png/ROSHNSA.png" scaling="stretch" class="gwd-image-m4wf gwd-gen-9xi5gwdanimation"></gwd-image>
+          <gwd-image id="PIF-logo" source="assets/png/PIF-logo.png" scaling="stretch" class="gwd-image-12c9 gwd-gen-17pogwdanimation"></gwd-image>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="23000"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
