--- a/zip/index.html
+++ b/zip/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="container">
-    <ul class="nav flex-column">
+    <ul class="nav flex-column text-center pt-5">
         <li class="nav-item">
             <a class="nav-link disabled" href="./120-600.zip">120-600</a>
         </li>
