update 970-90 gwd-taparea

--- a/googlewebdesigner/970-90.html
+++ b/googlewebdesigner/970-90.html
@@ -901,8 +901,8 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      width: 728px;
       height: 90px;
+      width: 970px;
     }
     .gwd-div-5lj8 {
       top: 0px;
@@ -1076,7 +1076,7 @@
           <div class="gwd-div-1w8m gwd-div-y3je gwd-gen-bl3lgwdanimation" id="bg-line"></div>
           <div class="gwd-div-1w8m gwd-div-y3je gwd-div-lc0v gwd-gen-zuozgwdanimation" id="bg-about"></div>
           <gwd-image id="PIF-logo" source="assets/png/PIF-logo.png" scaling="stretch" class="gwd-image-12c9 gwd-gen-17pogwdanimation"></gwd-image>
-          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-18wm" data-gwd-tl-locked="" data-gwd-tl-hidden=""></gwd-taparea>
+          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-18wm"></gwd-taparea>
           <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="24000"></div>
         </div>
       </gwd-page>
