--- a/googlewebdesigner/728-90/728-90.html
+++ b/googlewebdesigner/728-90/728-90.html
@@ -1048,7 +1048,7 @@
           <div class="gwd-div-1kkv gwd-div-1tof gwd-div-2fcb gwd-gen-1q96gwdanimation" id="bg3" data-gwd-tl-hidden=""></div>
           <gwd-image id="long-text-0" source="assets/png/long-text-0.png" scaling="stretch" class="gwd-image-16b3 gwd-gen-1axlgwdanimation" data-gwd-tl-hidden=""></gwd-image>
           <gwd-image id="hash-tag" source="assets/png/hash-tag.png" scaling="stretch" class="gwd-image-d1l2 gwd-gen-3vrhgwdanimation" data-gwd-tl-hidden=""></gwd-image>
-          <gwd-image id="PIF-text" source="assets/png/PIF-text.png" scaling="stretch" class="gwd-image-hez3 gwd-gen-1bdigwdanimation" data-gwd-tl-hidden=""></gwd-image>
+          <gwd-image id="PIF-text" source="assets/PIF-text.png" scaling="stretch" class="gwd-image-hez3 gwd-gen-1bdigwdanimation"></gwd-image>
           <gwd-image id="gwd-image_1" source="assets/png/roshn.sa.png" scaling="stretch" class="gwd-image-18do gwd-gen-spuogwdanimation"></gwd-image>
           <gwd-image id="internet" source="assets/internet.png" scaling="stretch" class="gwd-image-1xvr gwd-gen-19zhgwdanimation"></gwd-image>
           <div class="gwd-div-1w8m gwd-gen-5cc4gwdanimation" id="bg-roshn"></div>
